--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  div(ng-controller='indexController')
+  div(ng-controller='indexController', ng-init="init();")
     .ui.one.column.stackable.center.aligned.page.grid.margin-30
       .column.twelve.wide
         .ui.stacked.segment.gameArea
@@ -18,22 +18,12 @@ block content
               span.name Joe
               .message this is awesome
         .ui.items.chat
-          .item
-            .content
-              a.header.name Mehmet
-              .description.message Selam
-          .item
-            .content
-              a.header.name Alp
-              .description.message selam nasılsın :)
-          .item
-            .content
-              a.header.name Joe
-              .description.message this is awesome
-          .item
-            .content
-              a.header.name Sinang
-              .description.message hey
+          .item(ng-repeat="message in messages")
+            .content(ng-if="!message.type")
+              span {SERVER} &nbsp;
+              a.header.name {{ message.username}} &nbsp;
+              .description.message
+                | has joined
         .ui.action.input.fluid
           input(type='text', placeholder='Type here...')
           button.ui.button Send
