--- a/views/index.pug
+++ b/views/index.pug
@@ -11,7 +11,7 @@ block content
                         class="{{player.color}}")
             .relative
               span.name {{player.username}}
-              //.message
+              .message
 
         .ui.items.chat#chat-area
           .item(ng-repeat="message in messages")
